--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,3 +24,16 @@
     text-align: center;
     color: white;
 }
+
+.lottery-button{
+    border: solid 4px black;
+    border-radius: 1em;
+    
+    background-color: #429ef5!important;
+}
+
+.center-button{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+}
